<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/backgroundDark">

    <ImageButton
        android:id="@+id/imageButtonProfilePhotoProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_add_photo_200dp"
        android:contentDescription="@string/profile_photo_content_description" />

    <TextView
        android:id="@+id/textViewDisplayNameLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButtonProfilePhotoProfile"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/profile_display_name_label"
        android:textColor="@color/textOnDark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewDisplayNameProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDisplayNameLabelProfile"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/textOnDark"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider1Profile"
        style="@style/DividerHorizontal"
        android:layout_below="@id/textViewDisplayNameProfile" />

    <TextView
        android:id="@+id/textViewEmailLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1Profile"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/profile_email_label"
        android:textColor="@color/textOnDark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewEmailNotVerifiedLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1Profile"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/textViewEmailLabelProfile"
        android:gravity="center_vertical"
        android:text="@string/profile_email_not_verified_label"
        android:textColor="@color/textWarning"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewEmailProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEmailLabelProfile"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/textOnDark"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider2Profile"
        style="@style/DividerHorizontal"
        android:layout_below="@id/textViewEmailProfile" />

    <TextView
        android:id="@+id/textViewPasswordLabelProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2Profile"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:text="@string/profile_password_label"
        android:textColor="@color/textOnDark"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textViewPasswordProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPasswordLabelProfile"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_vertical"
        android:text="@string/profile_password_placeholder"
        android:textColor="@color/textOnDark"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider3Profile"
        style="@style/DividerHorizontal"
        android:layout_below="@id/textViewPasswordProfile"
        android:layout_marginBottom="40dp" />

    <RelativeLayout
        android:id="@+id/relativeLayoutReSendEmailVerificationProfile"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/divider3Profile"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReSendEmailVerificationProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/backgroundLightDark"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/profile_re_send_email_verification_label"
            android:textColor="@color/textOnDark"
            android:textSize="16sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewReSendEmailVerificationProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/profile_email_verification_sent_label"
            android:textColor="@color/textOnDark"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignOutProfile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutReSendEmailVerificationProfile"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/backgroundLightDark"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/user_sign_out_label"
        android:textColor="@color/textOnDark"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider4Profile"
        style="@style/DividerHorizontal"
        android:layout_above="@+id/textViewDeleteAccountProfile" />

    <TextView
        android:id="@+id/textViewDeleteAccountProfile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/divider5Profile"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:text="@string/profile_delete_account_label"
        android:textColor="@color/textWarning"
        android:textSize="16sp" />

    <View
        android:id="@+id/divider5Profile"
        style="@style/DividerHorizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp" />

</RelativeLayout>