<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCurrentEmailChangePassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutEditCurrentEmailChangePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/profile_change_password_current_email_label"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCurrentPasswordChangePassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textInputLayoutCurrentEmailChangePassword"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutEditCurrentPasswordChangePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/profile_change_password_current_password_label"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPasswordChangePassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textInputLayoutCurrentPasswordChangePassword"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutEditNewPasswordChangePassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:hint="@string/profile_change_password_new_password_label"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutSaveChangesChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutNewPasswordChangePassword">

        <TextView
            android:id="@+id/textViewIncorrectPasswordChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/user_incorrect_password_label"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSaveChangeChangePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewIncorrectPasswordChangePassword"
            android:background="@color/colorPrimary"
            android:text="@string/profile_save_label"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBarSaveChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewIncorrectPasswordChangePassword"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewChangedLabelChangePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewIncorrectPasswordChangePassword"
            android:background="@drawable/text_view_border"
            android:gravity="center"
            android:text="@string/changed_label"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>