<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCurrentEmailDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutEditCurrentEmailDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_delete_account_current_email_label"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCurrentPasswordDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textInputLayoutCurrentEmailDeleteAccount"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutEditCurrentPasswordDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/profile_delete_account_current_password_label"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutCurrentPasswordDeleteAccount">

        <TextView
            android:id="@+id/textViewIncorrectPasswordDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/user_incorrect_password_label"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewIncorrectPasswordDeleteAccount"
            android:background="@android:color/holo_red_light"
            android:text="@string/profile_delete_account_delete_label"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBarDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewIncorrectPasswordDeleteAccount"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>