<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/textInputLayoutDescriptionForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_description"
        android:textColor="@color/textOnDark"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailForgotPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textInputLayoutDescriptionForgotPassword"
        android:layout_marginBottom="40dp"
        android:textColor="@color/textOnDark"
        android:textColorHint="@color/textOnDark"
        android:textSize="16sp"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="false"
        app:hintTextColor="@color/textOnDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayoutEditEmailForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundLightDark"
            android:hint="@string/forgot_password_email_label"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/textOnDark"
            android:textColorHint="@color/textOnDark"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:hintTextColor="@color/textOnDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutSendForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutEmailForgotPassword">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSendForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/backgroundLightDark"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/forgot_password_send_label"
            android:textColor="@color/textOnDark"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBarSendForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>